Fixed center alignment in post list.

--- a/_assets/stylesheets/_style.sass
+++ b/_assets/stylesheets/_style.sass
@@ -92,13 +92,11 @@ h2.tagline
   text-align: center
 
 section.posts
-  +grid-row
+  width: 100%
   text-align: center
   h2
-    +grid-column($columns: 8, $center: true)
     font-size: 1.3rem
   ul.posts
-    +grid-column($columns: 8, $center: true)
     li
       text-transform: lowercase
       list-style-type: none
